# mql5

./: .cz.toml  .gitignore  .lint-skip-relative-paths  .lychee.toml  .mise.toml  .releaserc.yml  CHANGELOG.md  CLAUDE.md  LINK_FIX_SUMMARY.md  README.md  RELEASE_NOTES.md  config.yaml  mql5_extract.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
docs/: REFACTORING_PROPOSAL.md  REFACTORING_UPDATES.md  attachment_extraction_design.md  attachment_extraction_test_results.md  dependency_management.md  extraction_patterns.md  ood_authors_research.md  persistent_venv_migration.md
docs/python_research/: PYTHON_CONTENT_INVENTORY.md
docs/tick_research/: HTML_CLEANUP_SUMMARY.md  RESEARCH_SUMMARY.md  STRUCTURE_COMPARISON.md  TICK_CONTENT_INVENTORY.md
indicators/: README.md
indicators/atr_adaptive/: atr_adaptive_laguerre_rsi_custom_interval.mq5  atr_adaptive_laguerre_rsi_original.mq5  atr_adaptive_laguerre_rsi_refactor_for_python.mq5
indicators/basic/: moving_average.mq5  tick_volume.mq5
indicators/bollinger_bands/: bb_delta.mq5  bb_width.mq5
lib/: __init__.py  batch_processor.py  config_manager.py  discovery.py  extractor.py  logger.py
scripts/: README.md  extract_all_python_docs.sh  extract_complete_docs.py  extract_complete_docs_playwright.py  official_docs_extractor.py  quick_discover_urls.py
specifications/: bugfix-validation-findings.yaml  mql5-complete-docs-extraction.yaml  mql5-content-migration.yaml  mql5-documentation-cleanup.yaml  mql5-refactoring.yaml  mql5-skills-update.yaml
tests/: README.md  test_access.py  test_attachment_extraction.py  test_attachment_simple.py
tmp/: fix_malformed_tables.py
tradingview/: README.md
(+30 files in other folders)
