[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mql5-extractor"
version = "3.0.0"
description = "Production-grade MQL5 article extraction system with CLI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Terry Li"}
]
keywords = ["mql5", "web-scraping", "playwright", "trading", "extraction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mql5-extract = "mql5_extract:main"

[project.urls]
Homepage = "https://github.com/terrylica/mql5"
Repository = "https://github.com/terrylica/mql5"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.hatch.version]
path = "lib/__init__.py"

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "lib/__init__.py:__version__"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
